# AltEgo

./: .gitignore  CHANGELOG  LICENSE.md  README.md  main.py  pyproject.toml
docs/: LICENSE.md  PLAN.md
docs/sphinx/source/: conf.py  index.rst  installation.rst  intro.rst  modules.rst
docs/sphinx/source/_templates/: footer.html
src/altego/: __main__.py  app.py
src/altego/backend/: core.py  entities.py
src/altego/components/: __init__.py  entity_palette.py  main_content.py  right_sidebar.py
src/gui/: app.py
src/gui/components/: detail_view.py  entity_palette.py  graph_area.py  menu.py  overview.py  property_view.py  run_view.py
